--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "angular": "^1.5.0-beta.0",
     "body-parser": "^1.14.1",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.0",
     "ejs": "^2.3.4",
     "errorhandler": "^1.4.2",
     "express": "^4.13.3",
+    "express-messages": "^1.0.0",
     "express-session": "^1.12.1",
     "gulp": "^3.9.0",
     "gulp-nodemon": "^2.0.4",
